structure indent, and image aspect fit changed

--- a/SoluLabTask/PhotoGridCell/PopUpCollectionViewCell.xib
+++ b/SoluLabTask/PhotoGridCell/PopUpCollectionViewCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WlR-oc-gYV">
                         <rect key="frame" x="0.0" y="0.0" width="143" height="146"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6VI-uf-Mfl">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6VI-uf-Mfl">
                                 <rect key="frame" x="0.0" y="0.0" width="143" height="146"/>
                             </imageView>
                         </subviews>
